Fix issues with nav buttons overlapping at small sizes

--- a/css/main.css
+++ b/css/main.css
@@ -25,17 +25,6 @@ nav li a:hover {
   color: #df744a;
 }
 
-.nav-trial {
-  border: 4px solid rgba(223, 116, 74, .7);
-  padding: 8px;
-  border-radius: 10px;
-}
-
-.nav-trial:hover {
-  color: #fff;
-  background-color: rgba(223, 116, 74, 1);
-}
-
 .logo, ul {
   text-align: center;
 }
@@ -45,8 +34,11 @@ nav li a:hover {
 }
 
 .topbar {
-  background-color: rgba(191, 216, 210, .5);
+  background-color: rgba(191, 216, 210, 1);
+}
 
+.topbar-home {
+  background-color: rgba(191, 216, 210, .5);
 }
 
 .btn {
@@ -82,7 +74,7 @@ nav li a:hover {
   top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 2px;
+  min-width: 90%;
 }
 
 .hero-text-shadow {
@@ -108,6 +100,25 @@ hr {
 footer {
   color: #fff;
   background-color: #bfd8d2;
+}
+
+@media only screen and (min-width: 25em) {
+
+  .nav-trial {
+    border: 4px solid rgba(223, 116, 74, .7);
+    padding: 8px;
+    border-radius: 10px;
+  }
+
+  .nav-trial:hover {
+    color: #fff;
+    background-color: rgba(223, 116, 74, 1);
+  }
+
+  .nav-trial-current {
+    background-color: rgba(223, 116, 74, 1);
+  }
+
 }
 
 @media only screen and (min-width: 38em) {
